# zote

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: README.md  ROADMAP.md  ZOTE_v0.1.0.sha256  ZOTE_v0.1.0.sha256.ots  ZOTE_v0.1.0_manifest.json
docs/contribution/: CONTRIBUTING.md
docs/scripts/: zote_badges.py  zote_cicd_examples.py  zote_correlation_v3.py  zote_docs_v2.py  zote_engine_v2.py  zote_killchain_v2.py  zote_mitre_v2.py  zote_pass1_types.py  zote_pass2_engine.py  zote_pass3_correlation.py  zote_pass4_zote_engine.py  zote_pass5_tests.py  zote_readme.py  zote_timestamp.py
docs/security/: SECURITY.md
examples/: basic_detection.cpp  campaign_analysis.cpp  confidence_scoring.cpp  threat_hunting.cpp
include/zote/: correlation.hpp  engine.hpp  killchain.hpp  mitre.hpp  types.hpp  zote_engine.hpp
src/: correlation.cpp  engine.cpp  killchain.cpp  mitre_map.cpp  zote_engine.cpp
tests/unit/: test_correlation.cpp  test_engine.cpp  test_killchain.cpp  test_mitre.cpp  test_zote_engine.cpp
